# ZOMBIES

./: README.md  pyproject.toml  supremacy.py  trayectorias_2d.py  trayectorias_3d.py  zombies_apocalypse.py  zombies_apocalypse_discrete.py  zombies_apocalypse_vaccine.py  zombies_apocalypse_vaccine_normal.py  zombies_competition.py  zombies_competition_discrete.py  zombies_final_entrada_exogena.py  zombies_sistema_final.py
