[tool.poetry]
name = "zombies"
version = "0.1.0"
description = ""
authors = ["fitolobo <rodolfolobo@ug.uchile.cl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
scipy = "^1.15.3"
matplotlib = "^3.10.3"
numpy = "^2.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
